--- a/data/schema/types/pango.cfg
+++ b/data/schema/types/pango.cfg
@@ -59,12 +59,12 @@
 			value="none|single|double|low|error"
 		[/type]
 	[/union]
-[/tag]
-[tag]
+[/type]
+[type]
 	name="font_gravity"
 	value="south|east|north|west|auto"
-[/tag]
-[tag]
+[/type]
+[type]
 	name="font_gravity_hint"
 	value="natural|strong|line"
-[/tag]
+[/type]
